# joganacaixa

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  joganacaixa.sh  pyproject.toml
frontend/: index.html
joganacaixa/: api.py  cli.py  compression.py  config.py  encryption.py  faces.py  manifest.py  operations.py  reliability.py  resumable.py  setup_wizard.py
joganacaixa/storage/: __init__.py  azure.py  base.py  gcs.py  local.py  s3.py
tests/: test_compression.py  test_encryption.py  test_faces.py  test_manifest.py  test_operations.py  test_setup_wizard.py  test_storage.py
