[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joganacaixa"
version = "2.0.0"
description = "Multi-cloud backup tool with redundant storage and robust compression"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "rich>=13.7",
    "zstandard>=0.22",
    # Cloud SDKs — install only the backends you use
    "boto3>=1.34",
    "google-cloud-storage>=2.16",
    "azure-storage-blob>=12.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
joganacaixa = "joganacaixa.cli:main"

[tool.setuptools.packages.find]
include = ["joganacaixa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
